--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,7 @@
 # This file lists all individuals having contributed content to the repository.
 
-
+Bre Rickner <breannarickner@gmail.com>
+Ayden Townsley <aydentownsley@gmail.com>
 Jennifer Huang <133@holbertonschool.com>
 Alexa Orrico <210@holbertonschool.com>
 Joann Vuong <130@holbertonschool.com> 
